GNOME Bugzilla – Bug 727048
Invalid backlight level at startup
Last modified: 2014-08-05 10:44:27 UTC
Created attachment 272904 [details] Picture 1, after log in When I first log into gnome-shell, my backlight level shown on the system status is zero (see picture 1). I can get it ti show correctly after I reload gnome-shell (alt+f2 - r - enter) (see picture 2). I'm using gnome-shell-3.12.0 with latest components, all built today.
Created attachment 272905 [details] Picture 2, after reloading the shell
i think this because of a recent systemd change. the systemd-backlight@ service tries to restore the backlight from /var/lib/systemd/backlight and if there are multiple backlight interfaces, they fight with each other (only some of them will have the right value, some will say 0, etc).
$ ls /sys/class/backlight/ intel_backlight I only have single folder in /sys/class/backlight and systemd restores backlight way before gdm is even started. It might be something with intel ddx since latest version has some backlight helper in libexecdir which I'm not sure how it works.
could be. does it happen if you rm -f the ddx and just let it fallback to the generic modesetting driver ?
It's same on gnome-shell-wayland so I doubt it's true what I previously said.
Confirming this bug from Arch Linux and I remember seeing the same thing on gnome-shell-wayland against the newest xwayland ddx (with mutter from git) in an vmware virtual machine.
gnome-settings-daemon seems to be reporting the wrong value on startup, and never sends a PropertyChanged when it reads the real one. Code looks good to me, so I'm not sure what's going wrong.
Created attachment 274917 [details] [review] power: Emit change notification for brightness This is not happening automatically, and without it, the gnome-shell and the gnome-control-center sliders don't react to each others changes. This may also fix the problem where brightness sliders are stuck at zero after login.
*** Bug 728498 has been marked as a duplicate of this bug. ***
Comment on attachment 274917 [details] [review] power: Emit change notification for brightness Attachment 274917 [details] pushed as ca70fd0 - power: Emit change notification for brightness
*** Bug 725056 has been marked as a duplicate of this bug. ***
Putting on NEEDINFO to check whether the problem is fixed by that patch.
*** Bug 709127 has been marked as a duplicate of this bug. ***
Let's mark this as fixed, please file a new bug if the problem persists (it was fixed in gnome-settings-daemon 3.12.2 and 3.13.1).