power: Emit change notification for brightness

This is not happening automatically, and without it, the gnome-shell
and the gnome-control-center sliders don't react to each others
changes. This may also fix the problem where brightness sliders are
stuck at zero after login.

https://bugzilla.gnome.org/show_bug.cgi?id=727048